<resources>
    <string name="app_name">Dual Programers Code</string>
    <string name="title_activity_reference">Referencia</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Nombre de usuario</string>
    <string name="text_create_account">¿No tienes cuenta?,</string>
    <string name="password">Contraseña</string>
    <string name="text_login">Entrar</string>
    <string name="link_create_account">crea una aquí</string>
    <string name="fullname">Nombre</string>
    <string name="email">Correo</string>
    <string name="match_password">Confirmar contraseña</string>
    <string name="btn_create_account">Crear cuenta</string>
</resources>
